# ai-experiments

./: .gitignore  README.md  pyproject.toml
notebooks/: bitcoin.ipynb  deepseek.ipynb  diffusers.ipynb  flux-ft.ipynb  genetic_algorithm.ipynb  kfn.ipynb  monte_carlo.ipynb  reinforcement_learning.ipynb  transformers.ipynb  tuto_torch.ipynb
notes/: deepseek.md  flux-ft.md  fractal_encoder.md  genetic_algorithms.md  kfn.md  reinforcement_learning.md
