[project]
name = "ai-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "diffusers>=0.34.0",
    "huggingface-hub[cli]>=0.33.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
